style: format HTML

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
         <span id="connecting-message">connecting the timing source please wait ...</span>
         <button disabled id="metronome">start metronome</button>
         <input disabled id="bpm" max="300" min="30" step="1" type="number" value="120" />
-        <p>This is a demo of a metronome which uses the Web Audio API to achieve a very high precision. It's basically following the technique described by <a href="https://paul.cx">Paul Adenot</a> in his blogpost named <a href="https://blog.paul.cx/post/metronome">"A robust metronome using the Web Audio API"</a>. The metronome is connected to a <a href="https://github.com/chrisguttandin/timing-object">timing-object</a> which is itself connected to a <a href="https://github.com/chrisguttandin/timing-provider">timing-provider</a>. That means multiple instances of this page should be in sync with each other.</p>
+        <p>
+            This is a demo of a metronome which uses the Web Audio API to achieve a very high precision. It's basically following the
+            technique described by <a href="https://paul.cx">Paul Adenot</a> in his blogpost named
+            <a href="https://blog.paul.cx/post/metronome">"A robust metronome using the Web Audio API"</a>. The metronome is connected to a
+            <a href="https://github.com/chrisguttandin/timing-object">timing-object</a> which is itself connected to a
+            <a href="https://github.com/chrisguttandin/timing-provider">timing-provider</a>. That means multiple instances of this page
+            should be in sync with each other.
+        </p>
         <script src="scripts/app.js"></script>
     </body>
 </html>
